@@ -89,6 +89,7 @@ let ocaml_mods_internal = ref []
 let ocaml_pkgs_internal = ref []
 let ocaml_lflags_internal = ref []
 let ocaml_cflags_internal = ref []
+let ocaml_docflags_internal = ref []
 let ocaml_ppflags_internal = ref []
 let ocaml_yaccflags_internal = ref []
 let ocaml_lexflags_internal = ref []
@@ -162,6 +163,8 @@ let spec = ref (
    "-lflags", String (add_to ocaml_lflags_internal), "<flag,...> (idem)";
    "-cflag", String (add_to' ocaml_cflags_internal), "<flag> Add to ocamlc compile flags";
    "-cflags", String (add_to ocaml_cflags_internal), "<flag,...> (idem)";
+   "-docflag", String (add_to' ocaml_docflags_internal), "<flag> Add to ocamldoc flags";
+   "-docflags", String (add_to ocaml_docflags_internal), "<flag,...> (idem)";
    "-yaccflag", String (add_to' ocaml_yaccflags_internal), "<flag> Add to ocamlyacc flags";
    "-yaccflags", String (add_to ocaml_yaccflags_internal), "<flag,...> (idem)";
    "-lexflag", String (add_to' ocaml_lexflags_internal), "<flag> Add to ocamllex flags";
@@ -224,6 +227,7 @@ let ocaml_pkgs = ref []
 let ocaml_lflags = ref []
 let ocaml_cflags = ref []
 let ocaml_ppflags = ref []
+let ocaml_docflags = ref []
 let ocaml_yaccflags = ref []
 let ocaml_lexflags = ref []
 let program_args = ref []
@@ -272,6 +276,7 @@ let init () =
   reorder ocaml_cflags ocaml_cflags_internal;
   reorder ocaml_lflags ocaml_lflags_internal;
   reorder ocaml_ppflags ocaml_ppflags_internal;
+  reorder ocaml_docflags ocaml_docflags_internal;
   reorder ocaml_yaccflags ocaml_yaccflags_internal;
   reorder ocaml_lexflags ocaml_lexflags_internal;
   reorder program_args program_args_internal;
